src/objects/NTM_Product__c.object
<CustomObject>
    <description>Products used for the New to Market application</description>
    <fields>
        <fullName>Full_Description__c</fullName>
        <formula>Name &amp; &quot;: &quot; &amp; HS4_HS6_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS2_Description__c</fullName>
        <label>HS2 Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS4_Description__c</fullName>
        <label>HS4 Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS4_HS6_Description__c</fullName>
        <description>A concatenation of the HS4 and HS6 descriptions</description>
        <formula>IF(RIGHT(TRIM(HS4_Description__c), 1) == &apos;.&apos; || RIGHT(TRIM(HS4_Description__c), 1) == &apos;;&apos;, LEFT(TRIM(HS4_Description__c), LEN(TRIM(HS4_Description__c))-1), TRIM(HS4_Description__c)) &amp; &apos; - &apos; &amp; TRIM(HS6_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HS4,HS6 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HS6_Description__c</fullName>
        <label>HS6 Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTMProductNameXID__c</fullName>
        <description>This will be auto-populated from the NTM Product Name field, used for data imports.</description>
        <externalId>true</externalId>
        <label>NTM Product Name External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NTM Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>NTM Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NTM Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>